src/main/gen/com/warmthdawn/zenscript/parser/ZenScriptParser.java
// This is a generated file. Not intended for manual editing.
package com.warmthdawn.zenscript.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.warmthdawn.zenscript.psi.ZenScriptTypes.*;
import static com.warmthdawn.zenscript.psi.ZenScriptTypes.TokenSets.*;
import static com.warmthdawn.zenscript.parser.ZenScriptParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ZenScriptParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ARRAY_TYPE, CLASS_TYPE, FUNCTION_TYPE, LIST_TYPE,
      MAP_TYPE, PRIMITIVE_TYPE, QUALIFIED_CLASS_TYPE, TYPE),
    create_token_set_(BLOCK_STATEMENT, BREAK_STATEMENT, CONTINUE_STATEMENT, EXPRESSION_STATEMENT,
      FOREACH_STATEMENT, IF_STATEMENT, RETURN_STATEMENT, STATEMENT,
      VARIABLE_DECLARATION, WHILE_STATEMENT),
    create_token_set_(ADD_EXPRESSION, AND_AND_EXPRESSION, AND_EXPRESSION, ARRAY_INDEX_EXPRESSION,
      ARRAY_LITERAL, ASSIGNMENT_EXPRESSION, BRACKET_HANDLER_LITERAL, CALL_EXPRESSION,
      COMPARE_EXPRESSION, CONDITIONAL_EXPRESSION, EXPRESSION, FUNCTION_LITERAL,
      INSTANCE_OF_EXPRESSION, LITERAL_EXPRESSION, LOCAL_ACCESS_EXPRESSION, MAP_LITERAL,
      MEMBER_ACCESS_EXPRESSION, MUL_EXPRESSION, OR_EXPRESSION, OR_OR_EXPRESSION,
      PAREN_EXPRESSION, POSTFIX_EXPRESSION, PRIMITIVE_LITERAL, RANGE_EXPRESSION,
      TYPE_CAST_EXPRESSION, UNARY_EXPRESSION, XOR_EXPRESSION),
  };

  /* ********************************************************** */
  // '+' | '-' | '~'
  static boolean addOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addOp")) return false;
    boolean r;
    r = consumeToken(b, ADD_OP_TOKENS);
    return r;
  }

  /* ********************************************************** */
  // binaryOP | unaryOp | ':' | '.' '?'
  static boolean allOP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allOP")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = binaryOP(b, l + 1);
    if (!r) r = unaryOp(b, l + 1);
    if (!r) r = consumeToken(b, OP_COLON);
    if (!r) r = parseTokens(b, 0, DOT, OP_QUEST);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression (',' expression)*
  static boolean argumentList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentList")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1, -1);
    r = r && argumentList_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' expression)*
  private static boolean argumentList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argumentList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argumentList_1", c)) break;
    }
    return true;
  }

  // ',' expression
  private static boolean argumentList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argumentList_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = ','
    r = r && expression(b, l + 1, -1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '(' argumentList? ')'
  public static boolean arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments")) return false;
    if (!nextTokenIs(b, PAREN_OPEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENTS, null);
    r = consumeToken(b, PAREN_OPEN);
    p = r; // pin = 1
    r = r && report_error_(b, arguments_1(b, l + 1));
    r = p && consumeToken(b, PAREN_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // argumentList?
  private static boolean arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arguments_1")) return false;
    argumentList(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' expression ']'
  public static boolean arrayIndexExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayIndexExpression")) return false;
    if (!nextTokenIs(b, BRACK_OPEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _LEFT_, ARRAY_INDEX_EXPRESSION, null);
    r = consumeToken(b, BRACK_OPEN);
    p = r; // pin = 1
    r = r && report_error_(b, expression(b, l + 1, -1));
    r = p && consumeToken(b, BRACK_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // '[' (!']' expression (',' (expression | &']'))*)? ']'
  public static boolean arrayLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral")) return false;
    if (!nextTokenIs(b, BRACK_OPEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_LITERAL, null);
    r = consumeToken(b, BRACK_OPEN);
    p = r; // pin = 1
    r = r && report_error_(b, arrayLiteral_1(b, l + 1));
    r = p && consumeToken(b, BRACK_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (!']' expression (',' (expression | &']'))*)?
  private static boolean arrayLiteral_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1")) return false;
    arrayLiteral_1_0(b, l + 1);
    return true;
  }

  // !']' expression (',' (expression | &']'))*
  private static boolean arrayLiteral_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = arrayLiteral_1_0_0(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, expression(b, l + 1, -1));
    r = p && arrayLiteral_1_0_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // !']'
  private static boolean arrayLiteral_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, BRACK_CLOSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' (expression | &']'))*
  private static boolean arrayLiteral_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arrayLiteral_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayLiteral_1_0_2", c)) break;
    }
    return true;
  }

  // ',' (expression | &']')
  private static boolean arrayLiteral_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1_0_2_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, COMMA);
    p = r; // pin = 1
    r = r && arrayLiteral_1_0_2_0_1(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // expression | &']'
  private static boolean arrayLiteral_1_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1_0_2_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression(b, l + 1, -1);
    if (!r) r = arrayLiteral_1_0_2_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // &']'
  private static boolean arrayLiteral_1_0_2_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayLiteral_1_0_2_0_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _AND_);
    r = consumeToken(b, BRACK_CLOSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '=' | '+=' | '-=' | '*=' | '/=' | '%=' | '~=' | '&=' | '|=' | '^='
  static boolean assignmentOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignmentOp")) return false;
    boolean r;
    r = consumeToken(b, ASSIGNMENT_OP_TOKENS);
    return r;
  }

  /* ********************************************************** */
  // rangeOp | mulOp |  addOp | compareOP | assignmentOp | '&' | '^' | '|' |  '&&' |  '||'
  static boolean binaryOP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binaryOP")) return false;
    boolean r;
    r = rangeOp(b, l + 1);
    if (!r) r = mulOp(b, l + 1);
    if (!r) r = addOp(b, l + 1);
    if (!r) r = compareOP(b, l + 1);
    if (!r) r = assignmentOp(b, l + 1);
    if (!r) r = consumeToken(b, OP_AND);
    if (!r) r = consumeToken(b, OP_XOR);
    if (!r) r = consumeToken(b, OP_OR);
    if (!r) r = consumeToken(b, OP_AND_AND);
    if (!r) r = consumeToken(b, OP_OR_OR);
    return r;
  }

  /* ********************************************************** */
  // '{' statement* '}'
  public static boolean blockStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "blockStatement")) return false;
    if (!nextTokenIs(b, BRACE_OPEN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_STATEMENT, null);
    r = consumeToken(b, BRACE_OPEN);
    p = r; // pin = 1
    r = r && report_error_(b, blockStatement_1(b, l + 1));
    r = p && consumeToken(b, BRACE_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // statement*
  private static boolean blockStatement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "blockStatement_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "blockStatement_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '<' (!'>' <<any>>)+ '>'
  public static boolean bracketHandlerLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketHandlerLiteral")) return false;
    if (!nextTokenIs(b, OP_LESS)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BRACKET_HANDLER_LITERAL, null);
    r = consumeToken(b, OP_LESS);
    p = r; // pin = 1
    r = r && report_error_(b, bracketHandlerLiteral_1(b, l + 1));
    r = p && consumeToken(b, OP_GREATER) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (!'>' <<any>>)+
  private static boolean bracketHandlerLiteral_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketHandlerLiteral_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bracketHandlerLiteral_1_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!bracketHandlerLiteral_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bracketHandlerLiteral_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // !'>' <<any>>
  private static boolean bracketHandlerLiteral_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketHandlerLiteral_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = bracketHandlerLiteral_1_0_0(b, l + 1);
    p = r; // pin = 1
    r = r && any(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // !'>'
  private static boolean bracketHandlerLiteral_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bracketHandlerLiteral_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, OP_GREATER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'break' ';'
  public static boolean breakStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "breakStatement")) return false;
    if (!nextTokenIs(b, K_BREAK)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, BREAK_STATEMENT, null);
    r = consumeTokens(b, 1, K_BREAK, SEMICOLON);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // arguments
  public static boolean callExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callExpression")) return false;
    if (!nextTokenIs(b, PAREN_OPEN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, CALL_EXPRESSION, null);
    r = arguments(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // variableDeclaration | constructorDeclaration | functionDeclaration
  static boolean classBodyItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classBodyItem")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = variableDeclaration(b, l + 1);
    if (!r) r = constructorDeclaration(b, l + 1);
    if (!r) r = functionDeclaration(b, l + 1);
    exit_section_(b, l, m, r, false, ZenScriptParser::class_body_recover);
    return r;
  }

  /* ********************************************************** */
  // preprocessors 'zenClass' qualifiedName '{' classBodyItem* '}'
  public static boolean classDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDeclaration")) return false;
    if (!nextTokenIs(b, "<class declaration>", K_ZEN_CLASS, PREPROCESSOR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CLASS_DECLARATION, "<class declaration>");
    r = preprocessors(b, l + 1);
    r = r && consumeToken(b, K_ZEN_CLASS);
    p = r; // pin = 2
    r = r && report_error_(b, qualifiedName(b, l + 1));
    r = p && report_error_(b, consumeToken(b, BRACE_OPEN)) && r;
    r = p && report_error_(b, classDeclaration_4(b, l + 1)) && r;
    r = p && consumeToken(b, BRACE_CLOSE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // classBodyItem*
  private static boolean classDeclaration_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classDeclaration_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!classBodyItem(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classDeclaration_4", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // !('}' | 'function' | 'global' | 'static' | 'val' | 'var' | 'zenConstructor' | PREPROCESSOR)
  static boolean class_body_recover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_body_recover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !class_body_recover_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '}' | 'function' | 'global' | 'static' | 'val' | 'var' | 'zenConstructor' | PREPROCESSOR
  private static boolean class_body_recover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_body_recover_0")) return false;
    boolean r;
    r = consumeToken(b, BRACE_CLOSE);
    if (!r) r = consumeToken(b, K_FUNCTION);
    if (!r) r = consumeToken(b, K_GLOBAL);
    if (!r) r = consumeToken(b, K_STATIC);
    if (!r) r = consumeToken(b, K_VAL);
    if (!r) r = consumeToken(b, K_VAR);
    if (!r) r = consumeToken(b, K_ZEN_CONSTRUCTOR);
    if (!r) r = consumeToken(b, PREPROCESSOR);
    return r;
  }

  /* ********************************************************** */
  // '==' | '!=' | '<' | '<=' | '>' | '>=' | 'in' | 'has'
  static boolean compareOP(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compareOP")) return false;
    boolean r;
    r = consumeToken(b, COMPARE_OP_TOKENS);
    return r;
  }

  /* ********************************************************** */
  // '?' expression ':' expression
  static boolean conditionalTail(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditionalTail")) return false;
    if (!nextTokenIs(b, OP_QUEST)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, OP_QUEST);
    p = r; // pin = 1
    r = r && report_error_(b, expression(b, l + 1, -1));
    r = p && report_error_(b, consumeToken(b, OP_COLON)) && r;
    r = p && expression(b, l + 1, -1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }
